--- a/builds/checkin/mqtt.yaml
+++ b/builds/checkin/mqtt.yaml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
         displayName: Set env variables
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "mqtt"
         displayName: Install Rust
       - bash: scripts/linux/generic-rust/build.sh --project-root "mqtt" --packages "mqttd/Cargo.toml" --manifest-path --no-default-features
         displayName: Build with no default features
@@ -72,7 +72,7 @@ jobs:
     pool:
       vmImage: "ubuntu-16.04"
     steps:
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "mqtt"
         displayName: Install Rust
       - bash: mqtt/build/linux/format.sh
         displayName: Format Code
