--- a/builds/checkin/watchdog.yaml
+++ b/builds/checkin/watchdog.yaml
@@ -34,9 +34,9 @@ jobs:
     steps:
       - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
         displayName: Set env variables
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edge-hub/watchdog"
         displayName: Install Rust
-      - bash: scripts/linux/generic-rust/build.sh --project-root "watchdog" --packages "watchdog"
+      - bash: scripts/linux/generic-rust/build.sh --project-root "edge-hub/watchdog" --packages "watchdog"
         displayName: Build
 
   ################################################################################
@@ -48,9 +48,9 @@ jobs:
     pool:
       vmImage: "ubuntu-16.04"
     steps:
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edge-hub/watchdog"
         displayName: Install Rust
-      - bash: mqtt/build/linux/format.sh
+      - bash: scripts/linux/generic-rust/format.sh
         displayName: Format Code
-      - bash: mqtt/build/linux/clippy.sh
+      - bash: edge-hub/watchdog/build/clippy.sh
         displayName: Clippy
