--- a/builds/ci/mqtt.yaml
+++ b/builds/ci/mqtt.yaml
@@ -34,7 +34,8 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: mqtt/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "mqtt"
       - task: Bash@3
         displayName: Build
         inputs:
@@ -61,7 +62,8 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: mqtt/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "mqtt"
       - script: cargo install cross --version 0.1.16
         displayName: Install cross
       - task: Bash@3
@@ -113,7 +115,8 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: mqtt/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "mqtt"
       - task: Bash@3
         displayName: Format Code
         inputs:
