--- a/builds/checkin/edgelet.yaml
+++ b/builds/checkin/edgelet.yaml
@@ -136,7 +136,7 @@ jobs:
         displayName: Set env variables
       - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet"
         displayName: Install Rust
-      - bash: edgelet/build/linux/format.sh
+      - bash: scripts/linux/generic-rust/format.sh --project-root "edgelet"
         displayName: Format Code
       - bash: edgelet/build/linux/clippy.sh
         displayName: Clippy
