--- a/builds/checkin/watchdog.yaml
+++ b/builds/checkin/watchdog.yaml
@@ -50,7 +50,7 @@ jobs:
     steps:
       - bash: scripts/linux/generic-rust/install.sh --project-root "edge-hub/watchdog"
         displayName: Install Rust
-      - bash: scripts/linux/generic-rust/format.sh
+      - bash: scripts/linux/generic-rust/format.sh --project-root "edge-hub/watchdog"
         displayName: Format Code
       - bash: edge-hub/watchdog/build/clippy.sh
         displayName: Clippy
