--- a/builds/ci/mqtt.yaml
+++ b/builds/ci/mqtt.yaml
@@ -120,7 +120,8 @@ jobs:
       - task: Bash@3
         displayName: Format Code
         inputs:
-          filePath: mqtt/build/linux/format.sh
+          filePath: scripts/linux/generic-rust/format.sh
+          arguments: --project-root "mqtt"
       - task: Bash@3
         displayName: Clippy
         inputs:
