--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -17,6 +17,8 @@ tracing-subscriber = "0.1"
 mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
+chrono = "0.4"
+anyhow = "1.0"
 
 [features]
 default = ["edgehub"]
