renamed edgehub bridge / mqtt broker related config section

--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -20,6 +20,11 @@
     "TableQos2StatePersistenceProvider.StorageConnectionString": "UseDevelopmentStorage=true",
     "TableQos2StatePersistenceProvider.StorageTableName": "mqttqos2"
   },
+  "mqttBrokerSettings": {
+    "enabled": true,
+    "port": 1883,
+    "url": "127.0.0.1"
+  },
   "amqpSettings": {
     "enabled": true,
     "scheme": "amqps",
