rename mqttSettings to legacyMqttSettings and remove unused configuration option from test script

--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -1,5 +1,5 @@
 ﻿{
-  "mqttSettings": {
+  "legacyMqttSettings": {
     "enabled": true,
     "MaxPendingInboundAcknowledgements": 16,
     "DeviceReceiveAckTimeout": "00:00:00",
