--- a/builds/checkin/watchdog.yaml
+++ b/builds/checkin/watchdog.yaml
@@ -8,7 +8,7 @@ jobs:
   ################################################################################
   - job: check_run_pipeline
   ################################################################################
-    displayName: Check pipeline preconditions (changes ARE in builds or edge hub)
+    displayName: Check pipeline preconditions (changes ARE in builds or watchdog)
     pool:
       vmImage: "ubuntu-16.04"
     steps:
@@ -24,7 +24,7 @@ jobs:
   ################################################################################
   - job: linux_amd64
   ################################################################################
-    displayName: Linux amd64
+    displayName: Linux amd64 checkin gate
     dependsOn: check_run_pipeline
     condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
     pool:
@@ -36,16 +36,6 @@ jobs:
         displayName: Install Rust
       - bash: scripts/linux/generic-rust/build.sh --project-root "edge-hub/watchdog" --packages "watchdog"
         displayName: Build
-
-  ################################################################################
-  - job: style_check
-  ################################################################################
-    displayName: Style Check
-    dependsOn: check_run_pipeline
-    condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
-    pool:
-      vmImage: "ubuntu-16.04"
-    steps:
       - bash: scripts/linux/generic-rust/install.sh --project-root "edge-hub/watchdog"
         displayName: Install Rust
       - bash: scripts/linux/generic-rust/format.sh --project-root "edge-hub/watchdog"
