--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -21,11 +21,10 @@ jobs:
             docker login '$(registry.address)' --username '$(registry.user)' --password '$(registry.password)'
         displayName: 'Docker Login'
       - task: Bash@3
-        displayName: "Install Rust"
-        inputs: 
-          arguments: "--package-arm"
-          filePath: ./edgelet/build/linux/install.sh
-          targetType: filePath
+        displayName: Install Rust
+        inputs:
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "edgelet" --package-arm
       - bash: "echo \"##vso[task.setvariable variable=PATH;]$HOME/.cargo/bin:$PATH\""
         displayName: "Modify path"
       - template: ../templates/install-dotnet2.yaml
