--- a/builds/misc/templates/image-linux-rust-jobs.yaml
+++ b/builds/misc/templates/image-linux-rust-jobs.yaml
@@ -15,7 +15,7 @@ jobs:
       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
         displayName: 'Docker Login'
 
-      - script: edgelet/build/linux/install.sh --package-arm
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet" --package-arm
         displayName: Install Rust
 
       - bash: 'echo "##vso[task.setvariable variable=PATH;]${CARGO_HOME:-"$HOME/.cargo"}/bin:$PATH"'
