--- a/edgelet/contrib/config/linux/config.yaml
+++ b/edgelet/contrib/config/linux/config.yaml
@@ -330,7 +330,22 @@ homedir: "/var/lib/iotedge"
 # Additional container network configuration such as enabling IPv6 networking
 # and providing the IPAM settings can be achieved by specifying the relevant
 # configuration in the network settings.
+# 
+# Content Trust is enabled by specifying the location of root CA per registry 
 #
+# content_trust_root_ca_registry - configures the mapping of registry URL and 
+# the location of root CA
+#
+# registryserverurl1 - URL of registry 1
+# "/path/to/root_registry1.ca" - path to the root CA for registry 1
+#
+# registryserverurl2 - URL of registry 2
+# "/path/to/root_registry2.ca" - path to the root CA for registry 2
+#
+# content_trust_root_ca_registry :
+#   registryserverurl1 : "/path/to/root_registry1.ca"
+#   registryserverurl2 : "/path/to/root_registry2.ca"
+# 
 # network:
 #   name: "azure-iot-edge"
 #   ipv6: true
@@ -348,7 +363,9 @@ homedir: "/var/lib/iotedge"
 
 moby_runtime:
   uri: "unix:///var/run/docker.sock"
-  # network: "azure-iot-edge"
+  # content_trust_root_ca_registry :
+  #   registryserverurl1 : "/path/to/root_registry1.ca"
+  #   registryserverurl2 : "/path/to/root_registry2.ca"
   #
   # network:
   #   name: "azure-iot-edge"
