--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -16,6 +16,7 @@ jobs:
       registry.address: edgerelease.azurecr.io
       registry.user: EdgeRelease
     steps: 
+      # Setup dependencies
       - bash: |
             docker login '$(build.registry.address)' --username '$(build.registry.user)' --password '$(build.registry.password)'
             docker login '$(registry.address)' --username '$(registry.user)' --password '$(registry.password)'
@@ -33,11 +34,15 @@ jobs:
       - template: ../templates/dotnet3-globaljson.yaml # use dotnet 3 as primary install for build
       - bash: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
         displayName: "Install cross (fork with docker fix)"
+      # Build
       - task: ShellScript@2
         displayName: "Build Azure-IoT-Edge-Core"
         inputs: 
           args: "-c Release"
           scriptPath: scripts/linux/buildBranch.sh
+      - template: templates/build-broker-watchdog.yaml
+      - template: templates/consolidate-edgehub-artifacts.yaml
+      # Code Sign
       - template: ../templates/dotnet2-globaljson.yaml # switch to dotnet 2 as primary install for code sign
       - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
         displayName: "Edge Agent Code Sign"
@@ -295,17 +300,18 @@ jobs:
                 }
               ]
           signConfigType: inlineSignParams
+      # Push images
+      - template: templates/image-linux.yaml
+        parameters: 
+          imageName: azureiotedge-hub
+          name: "Edge Hub"
+          project: edge-hub
+          version: $(version)
       - template: templates/image-linux.yaml
         parameters: 
           imageName: azureiotedge-agent
           name: "Edge Agent"
           project: Microsoft.Azure.Devices.Edge.Agent.Service
-          version: $(version)
-      - template: templates/image-linux.yaml
-        parameters: 
-          imageName: azureiotedge-hub
-          name: "Edge Hub"
-          project: Microsoft.Azure.Devices.Edge.Hub.Service
           version: $(version)
       - template: templates/image-linux.yaml
         parameters: 
