--- a/builds/checkin/edgelet.yaml
+++ b/builds/checkin/edgelet.yaml
@@ -34,11 +34,11 @@ jobs:
     steps:
       - script: echo "##vso[task.setvariable variable=NO_VALGRIND;]true"
         displayName: Set env variables
-      - bash: edgelet/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet"
         displayName: Install Rust
       - bash: edgelet/build/linux/check-submodules.sh
         displayName: Check submodules
-      - bash: edgelet/build/linux/build.sh
+      - bash: scripts/linux/generic-rust/build.sh --project-root "edgelet" --packages "iotedge;iotedged;iotedge-diagnostics;iotedge-proxy" --reduced-linker
         displayName: Build
       - bash: edgelet/build/linux/build-k8s.sh
         displayName: Build (runtime-kubernetes)
@@ -63,7 +63,7 @@ jobs:
           VERSION="$BASE_VERSION$BUILD_BUILDNUMBER"
           echo "##vso[task.setvariable variable=VERSION;]$VERSION"
         displayName: Set Version
-      - script: edgelet/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet"
         displayName: Install Rust
       - script: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
         displayName: "Install cross (fork with docker fix)"
@@ -92,7 +92,7 @@ jobs:
           VERSION="$BASE_VERSION$BUILD_BUILDNUMBER"
           echo "##vso[task.setvariable variable=VERSION;]$VERSION"
         displayName: Set Version
-      - script: edgelet/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet"
         displayName: Install Rust
       - script: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
         displayName: "Install cross (fork with docker fix)"
@@ -134,9 +134,9 @@ jobs:
     steps:
       - script: echo "##vso[task.setvariable variable=NO_VALGRIND;]true"
         displayName: Set env variables
-      - bash: edgelet/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "edgelet"
         displayName: Install Rust
-      - bash: edgelet/build/linux/format.sh
+      - bash: scripts/linux/generic-rust/format.sh --project-root "edgelet"
         displayName: Format Code
       - bash: edgelet/build/linux/clippy.sh
         displayName: Clippy
