--- a/builds/checkin/mqtt.yaml
+++ b/builds/checkin/mqtt.yaml
@@ -34,10 +34,12 @@ jobs:
     steps:
       - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
         displayName: Set env variables
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "mqtt"
         displayName: Install Rust
-      - bash: mqtt/build/linux/build.sh
-        displayName: Build
+      - bash: scripts/linux/generic-rust/build.sh --project-root "mqtt" --packages "mqttd/Cargo.toml" --manifest-path --no-default-features
+        displayName: Build with no default features
+      - bash: scripts/linux/generic-rust/build.sh --project-root "mqtt" --packages "mqttd/Cargo.toml" --manifest-path
+        displayName: Build with default features
       - bash: mqtt/build/linux/test.sh
         displayName: Test
 
@@ -70,9 +72,9 @@ jobs:
     pool:
       vmImage: "ubuntu-16.04"
     steps:
-      - bash: mqtt/build/linux/install.sh
+      - bash: scripts/linux/generic-rust/install.sh --project-root "mqtt"
         displayName: Install Rust
-      - bash: mqtt/build/linux/format.sh
+      - bash: scripts/linux/generic-rust/format.sh --project-root "mqtt"
         displayName: Format Code
       - bash: mqtt/build/linux/clippy.sh
         displayName: Clippy
