--- a/builds/ci/edgelet.yaml
+++ b/builds/ci/edgelet.yaml
@@ -20,7 +20,8 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: edgelet/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "edgelet"
       - task: Bash@3
         displayName: Check submodules
         inputs:
@@ -28,7 +29,8 @@ jobs:
       - task: Bash@3
         displayName: Build
         inputs:
-          filePath: edgelet/build/linux/build.sh
+          filePath: scripts/linux/generic-rust/build.sh
+          arguments: --project-root "edgelet" --packages "iotedge;iotedged;iotedge-diagnostics;iotedge-proxy" --reduced-linker 
       - task: Bash@3
         displayName: Test
         inputs:
@@ -50,7 +52,8 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: edgelet/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "edgelet"
       - script: cargo install --git https://github.com/arsing/cross.git --branch set-path
         displayName: Install cross (fork with docker fix)
       - task: Bash@3
@@ -103,11 +106,13 @@ jobs:
       - task: Bash@3
         displayName: Install Rust
         inputs:
-          filePath: edgelet/build/linux/install.sh
+          filePath: scripts/linux/generic-rust/install.sh
+          arguments: --project-root "edgelet"
       - task: Bash@3
         displayName: Format Code
         inputs:
-          filePath: edgelet/build/linux/format.sh
+          filePath: scripts/linux/generic-rust/format.sh
+          arguments: --project-root "edgelet"
       - task: Bash@3
         displayName: Clippy
         inputs:
