Remove windows testing from Image Builds, Checkin, CI, E2E (#3193)
* remove watchdog

* remove unneeded cmake args

* remove all cmake args

* clean up dockerfiles

* remove mdbook and graphviz dependencies from musl builder image

* add licence for musl-builder

* remove windows from checkin and ci

* remove windows from longhaul and stress

* remove windows from new e2e

* remove windows build image helpers and images release

* remove mqtt windows checkin and relevant scripts

* remove scripts related to windows build

* remove windows e2e files

* update devguide

* missed removal of windows from mqtt ci

* misnamed rust toolchain

* fix permissions

--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -6,7 +6,7 @@ jobs:
     # This job is run on a hosted linux agent, which needs dotnet 2 and 3 installed as a manual step. 
     # The code sign steps will fail unless we explicitly say to use dotnet 2 before.
     # This means we have to toggle back and forth between primary dotnet installations for the sign and build.
-    # TODO: Investigate why we have to toggle primary installs on linux, but not on windows.
+    # TODO: Investigate why we have to toggle primary installs on linux, when we didn't have to do this on windows (now removed).
     timeoutInMinutes: 120
     displayName: LinuxDotnet
     pool: 
