--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -17,6 +17,7 @@ tracing-subscriber = "0.1"
 mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
+mqtt3 = { path = "../mqtt3", features = ["serde1"] }
 chrono = "0.4"
 anyhow = "1.0"
 
