[mqtt] Load server certificate on start in edgehub mode (#3218)
* Refactor mqttd bootstrapping logic for cleaner edgehub/generic broker separation
* Add workload API client that supports UDS/HTTP as protocols
* Refactor config to require explicit TCP/TLS specification instead of an array of transports

--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -17,6 +17,13 @@ tracing-subscriber = "0.1"
 mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
+chrono = "0.4"
+anyhow = "1.0"
+
+[dev-dependencies]
+mockito = "0.25"
+serde_json = "1.0"
+tempfile = "3"
 
 [features]
 default = ["edgehub"]
