Added bridge functionality to connect edgeHub and MQTT Broker (#3210)

--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -1,6 +1,6 @@
 ﻿{
   "mqttSettings": {
-    "enabled": true,
+    "enabled": false,
     "MaxPendingInboundAcknowledgements": 16,
     "DeviceReceiveAckTimeout": "00:00:00",
     "MaxInboundMessageSize": "262144",
@@ -19,6 +19,11 @@
     "BlobSessionStatePersistenceProvider.StorageContainerName": "mqtt-sessions",
     "TableQos2StatePersistenceProvider.StorageConnectionString": "UseDevelopmentStorage=true",
     "TableQos2StatePersistenceProvider.StorageTableName": "mqttqos2"
+  },
+  "mqttBrokerSettings": {
+    "enabled": true,
+    "port": 1883,
+    "url": "127.0.0.1"
   },
   "amqpSettings": {
     "enabled": true,
