--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
+regex = "1.3"
 atty = "0.2"
 clap = "2.33"
 futures-util = { version = "0.3", features = ["sink"] }
