--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 regex = "1.3"
 atty = "0.2"
 clap = "2.33"
+futures = "0.3"
 futures-util = { version = "0.3", features = ["sink"] }
 tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal", "stream", "tcp", "time"] }
 native-tls = "0.2"
