--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal",
 native-tls = "0.2"
 tracing = "0.1"
 tracing-subscriber = "0.1"
+lazy_static = "1.4"
 
 mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
