--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -13,6 +13,7 @@ http = "0.2"
 hyper = "0.13"
 futures-util = "0.3"
 lazy_static = "1.4"
+native-tls = "0.2"
 openssl = "0.10"
 regex = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
