stop using EXE_DIR argument for edgehub

--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -7,8 +7,6 @@ ADD ./watchdog/target/x86_64-unknown-linux-musl/release/watchdog /usr/local/bin/
 ADD ./mqttd/target/x86_64-unknown-linux-musl/release/mqttd /usr/local/bin/mqttd
 ADD ./mqttd/production.json /app/mqttd/production.json
 
-ARG EXE_DIR=./Microsoft.Azure.Devices.Edge.Hub.Service
-
 # RocksDB requires snappy	
 RUN apk update && \	
     apk add --no-cache snappy libcap	
@@ -26,7 +24,7 @@ COPY --from=builder publish/* /usr/local/lib/
 
 WORKDIR /app	
 
-COPY $EXE_DIR/ ./
+COPY Microsoft.Azure.Devices.Edge.Hub.Service/ ./
 
 # Set broker log level
 ENV RUST_LOG=info
