--- a/edge-hub/docker/linux/arm32v7/Dockerfile
+++ b/edge-hub/docker/linux/arm32v7/Dockerfile
@@ -5,11 +5,9 @@ ADD ./watchdog/target/armv7-unknown-linux-gnueabihf/release/watchdog /usr/local/
 ADD ./mqttd/target/armv7-unknown-linux-gnueabihf/release/mqttd /usr/local/bin/mqttd
 ADD ./mqttd/production.json /app/mqttd/production.json
 
-ARG EXE_DIR=./Microsoft.Azure.Devices.Edge.Hub.Service
-
 WORKDIR /app
 
-COPY $EXE_DIR/ ./edge-hub
+COPY Microsoft.Azure.Devices.Edge.Hub.Service/ ./
 
 # Set broker log level
 ENV RUST_LOG=info
