--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,13 @@ bytes = "~0.5"
 hyper = "~0.13"
 hyper-tls = "~0.4"
 hyperlocal = "~0.7"
-iotedge-aad = { git = "https://github.com/R25l84IHeXjIxy6HO1QXn0y0Dq9mt8EN/iotedge-aad" }
+iotedge-aad = { git = "https://github.com/R25l84IHeXjIxy6HO1QXn0y0Dq9mt8EN/iotedge-aad.git" }
 futures = "~0.3"
+lazy_static = "~1.4"
 libc = "~0.2"
 # log = "0.4"
 percent-encoding = "~2.1"
+regex = "~1.3"
 ring = { version = "~0.16", features = ["std"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
