--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -100,6 +100,7 @@ steps:
       relayerImage = "$imagePrefix-relayer:$imageTag";
       networkControllerImage = "$imagePrefix-network-controller:$imageTag";
       testResultCoordinatorImage = "$imagePrefix-test-result-coordinator:$imageTag";
+      plugAndPlayIdentityImage = "$imagePrefix-plugandplayidentity:$imageTag";
       metricsValidatorImage = "$imagePrefix-metrics-validator:$imageTag";
       edgeAgentBootstrapImage = "$imagePrefix-agent-bootstrap-e2e-$(os)-$(arch)";
       registries = @(
