make directory for configuration files and move broker config

--- a/edge-hub/docker/linux/arm64v8/Dockerfile
+++ b/edge-hub/docker/linux/arm64v8/Dockerfile
@@ -3,7 +3,7 @@ FROM azureiotedge/azureiotedge-hub-base:${base_tag}
 
 ADD ./watchdog/target/aarch64-unknown-linux-gnu/release/watchdog /usr/local/bin/watchdog
 ADD ./mqttd/target/aarch64-unknown-linux-gnu/release/mqttd /usr/local/bin/mqttd
-ADD ./mqttd/production.json /app/mqttd/production.json
+ADD ./mqttd/broker.json /app/mqttd/broker.json
 
 WORKDIR /app
 
