--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -6,24 +6,24 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
 atty = "0.2"
+chrono = "0.4"
 clap = "2.33"
 futures-util = { version = "0.3", features = ["sink"] }
 tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal", "stream", "tcp", "time"] }
 native-tls = "0.2"
+thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 
 mqtt-broker = { path = "../mqtt-broker", default-features = false }
 mqtt-broker-core = { path = "../mqtt-broker-core" }
 mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
-chrono = "0.4"
-anyhow = "1.0"
 
 [dev-dependencies]
 mockito = "0.25"
 serde_json = "1.0"
-tempfile = "3"
 
 [features]
 default = ["edgehub"]
