--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1"
 base64 = "0.12.0"
 bytes = "0.5"
 chrono = "0.4"
+config = { version = "0.10", features = ["json"], default-features = false }
 http = "0.2"
 hyper = "0.13"
 futures-util = "0.3"
