--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,19 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-base64 = "~0.12"
+# base64 = "~0.12"
 bytes = "~0.5"
 hyper = "~0.13"
 hyper-tls = "~0.4"
 hyperlocal = "~0.7"
 iotedge-aad = { git = "https://github.com/dmolokanov/iotedge-aad" }
+aziot-key-client-async = { path = "extern/iot-identity-service/key/aziot-key-client-async" }
+aziot-key-common = { path = "extern/iot-identity-service/key/aziot-key-common" }
 futures = "~0.3"
 lazy_static = "~1.4"
 libc = "~0.2"
 # log = "0.4"
-percent-encoding = "~2.1"
+# percent-encoding = "~2.1"
 regex = "~1.3"
 reqwest = "~0.10"
 ring = { version = "~0.16", features = ["std"] }
