--- a/edgelet/api/workloadVersion_2020_07_22.yaml
+++ b/edgelet/api/workloadVersion_2020_07_22.yaml
@@ -235,7 +235,7 @@ paths:
       summary: Get the value of a secret.
       operationId: GetSecret
       produces:
-        - text/plain
+        - application/json
       parameters:
         - $ref: '#/parameters/api-version'
         - in: path
@@ -262,7 +262,7 @@ paths:
       summary: Set the value of a secret.
       operationId: SetSecret
       consumes:
-        - text/plain
+        - application/json
       parameters:
         - $ref: '#/parameters/api-version'
         - in: path
