--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -6,14 +6,12 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
-base64 = "0.12.0"
 bytes = "0.5"
 chrono = "0.4"
 http = "0.2"
 hyper = "0.13"
 futures-util = "0.3"
 lazy_static = "1.4"
-native-tls = "0.2"
 openssl = "0.10"
 regex = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -34,7 +32,5 @@ hyperlocal = "0.7"
 [dev-dependencies]
 matches = "0.1"
 mockito = "0.25"
-native-tls = "0.2"
 test-case = "1.0"
-tokio = { version = "0.2", features = ["macros", "dns"] }
-tokio-native-tls = "0.1"
+tokio = { version = "0.2", features = ["macros"] }
