EdgeHub Build Fixes (#3235)
This PR contains the following changes:
- Since the broker now dynamically retrieves the cert and stores it in the location specified in the config, we need to add this path to the config. We also need to change the config to fit the new format from Denis's recent workload PR.
- The build pipeline injects a build argument (EXE_DIR=.) when building the edgehub image, which overwrites the intended path and bloats the image size. We should not use this build argument in the Dockerfile.
- There was a misconfiguration on arm for the path of the executables. I forgot to remove the "./edge-hub" inside the arm dockerfiles while debugging something unrelated

--- a/edge-hub/docker/linux/arm32v7/Dockerfile
+++ b/edge-hub/docker/linux/arm32v7/Dockerfile
@@ -3,13 +3,11 @@ FROM azureiotedge/azureiotedge-hub-base:${base_tag}
 
 ADD ./watchdog/target/armv7-unknown-linux-gnueabihf/release/watchdog /usr/local/bin/watchdog
 ADD ./mqttd/target/armv7-unknown-linux-gnueabihf/release/mqttd /usr/local/bin/mqttd
-ADD ./mqttd/production.json /app/mqttd/production.json
-
-ARG EXE_DIR=./Microsoft.Azure.Devices.Edge.Hub.Service
+ADD ./mqttd/broker.json /app/mqttd/broker.json
 
 WORKDIR /app
 
-COPY $EXE_DIR/ ./edge-hub
+COPY Microsoft.Azure.Devices.Edge.Hub.Service/ ./
 
 # Set broker log level
 ENV RUST_LOG=info
