[mqtt] Refactor settings reading for broker (#3263)
There are 2 modes broker can potentially work the generic broker and edge-hub protocol head. In edge-hub mode, the broker requires additional configuration that's not applicable for generic broker: custom authentication and system transport protocol. 

As the result, there is an additional crate in the workspace `mqtt-generic` which contains settings for generic mqtt broker now.

--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 async-trait = "0.1"
 bytes = "0.5"
 chrono = "0.4"
+config = { version = "0.10", features = ["json"], default-features = false }
 http = "0.2"
 hyper = "0.13"
 futures-util = "0.3"
