Revert appsettings_hub.json

--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -1,6 +1,6 @@
 ﻿{
   "mqttSettings": {
-    "enabled": true,
+    "enabled": false,
     "MaxPendingInboundAcknowledgements": 16,
     "DeviceReceiveAckTimeout": "00:00:00",
     "MaxInboundMessageSize": "262144",
@@ -20,6 +20,11 @@
     "TableQos2StatePersistenceProvider.StorageConnectionString": "UseDevelopmentStorage=true",
     "TableQos2StatePersistenceProvider.StorageTableName": "mqttqos2"
   },
+  "mqttBrokerSettings": {
+    "enabled": true,
+    "port": 1883,
+    "url": "127.0.0.1"
+  },
   "amqpSettings": {
     "enabled": true,
     "scheme": "amqps",
@@ -29,16 +34,13 @@
     "enabled": true,
     "port": 443
   },
-  "mqttBrokerSettings": {
-    "enabled": false
+  "authAgentSettings": {
+    "enabled": true,
+    "port": 7120,
+    "baseUrl": "/authenticate/"
   },
-  "#\"EdgeModuleHubServerCertificateFile\"": "iot-edge-device-ca-edgehubCA.cert.pfx",
-  "#\"EdgeModuleHubServerCAChainCertificateFile\"": "C:\\temp\\edgehub_certs",
-  "EdgeHubDevServerCertificateFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA-full-chain.cert.pem",
-  "EdgeHubDevServerPrivateKeyFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.key.pem",
-  "EdgeHubDevTrustBundleFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.cert.pem",
   "IotHubConnectionPoolSize": 1,
-  "IotHubConnectionString": "HostName=ancan-nested-edge.azure-devices.net;DeviceId=richmaEdge2;ModuleId=$edgeHub;SharedAccessKey=bpr8Ed2UlfRVVXZhZ0Non4FhhaV/1mI3hnyJ0n2DMqU=",
+  "IotHubConnectionString": "",
   "mqttTopicNameConversion": {
     "InboundTemplates": [
       "devices/{deviceId}/messages/events/{params}/",
@@ -68,7 +70,7 @@
   "storeAndForward": {
     "timeToLiveSecs": "-1"
   },
-  "RuntimeLogLevel": "debug",
+  "RuntimeLogLevel": "info",
   "ClientCertAuthEnabled": true,
   "OptimizeForPerformance": true,
   "ConnectivityCheckFrequencySecs": 300,
@@ -81,12 +83,5 @@
   "AuthenticationMode": "CloudAndScope",
   "DeviceScopeCacheRefreshRateSecs": 3600,
   "CloudConnectionIdleTimeoutSecs": 3600,
-  "CloseCloudConnectionOnIdleTimeout": true,
-    "authAgentSettings": {
-    "enabled": false,
-    "port": 7120,
-    "baseUrl": "/authenticate/"
-  },
-  "UpstreamProtocol": "Amqp",
-  "NestedEdgeEnabled": true
+  "CloseCloudConnectionOnIdleTimeout": true
 }
