--- a/builds/misc/templates/mqtt-perf-run.yaml
+++ b/builds/misc/templates/mqtt-perf-run.yaml
@@ -4,262 +4,126 @@ jobs:
   # Fan-in Test cases (many publishers/few subscribers)
   ################################################################################	
   
-  ### QoS 0
-  
   - template: mqtt-perf-test-case.yaml
     parameters: 
       parentJob: setup_completed
       id: 1
-      publishers: 100
-      subscribers: 2
-      topics: 1
-      payload: 32
+      publishers: 10
+      subscribers: 10
+      topics: 10
+      payload: 128
       qos: 0
-  
+
   - template: mqtt-perf-test-case.yaml
     parameters: 
       parentJob: run_completed_1
       id: 2
       publishers: 10
-      subscribers: 2
-      topics: 1
-      payload: 131072 # 128kb
-      qos: 0
+      subscribers: 10
+      topics: 10
+      payload: 128
+      qos: 1
 
   - template: mqtt-perf-test-case.yaml
     parameters: 
       parentJob: run_completed_2
       id: 3
-      publishers: 100
-      subscribers: 2
-      topics: 100
-      payload: 32
+      publishers: 10
+      subscribers: 1
+      topics: 1
+      payload: 128
       qos: 0
-  
+
   - template: mqtt-perf-test-case.yaml
     parameters: 
       parentJob: run_completed_3
       id: 4
       publishers: 10
-      subscribers: 2
-      topics: 10
-      payload: 131072 # 128kb
-      qos: 0
-  
-  ### QoS 1
-  
+      subscribers: 1
+      topics: 1
+      payload: 128
+      qos: 1
+
+## 1kb
+
   - template: mqtt-perf-test-case.yaml
     parameters: 
       parentJob: run_completed_4
-      id: 50
-      publishers: 100
-      subscribers: 2
-      topics: 1
-      payload: 32
-      qos: 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_50
-      id: 51
+      id: 5
       publishers: 10
-      subscribers: 2
-      topics: 1
-      payload: 131072 # 128kb
-      qos: 1
-
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_51
-      id: 52
-      publishers: 100
-      subscribers: 2
-      topics: 100
-      payload: 32
-      qos: 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_52
-      id: 53
-      publishers: 10
-      subscribers: 2
+      subscribers: 10
       topics: 10
-      payload: 131072 # 128kb
-      qos: 1
-  
-  ################################################################################	
-  # 1-to-1 Test cases
-  ################################################################################	
-  
-  ### QoS 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_53
-      id: 100
-      publishers: 10
-      subscribers: 10
-      topics: 1
-      payload: 32
-      qos: 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_100
-      id: 101
-      publishers: 10
-      subscribers: 10
-      topics: 1
-      payload: 131072 # 128kb
-      qos: 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_101
-      id: 102
-      publishers: 100
-      subscribers: 100
-      topics: 100
-      payload: 32 # 128kb
+      payload: 1024
       qos: 0
 
   - template: mqtt-perf-test-case.yaml
     parameters: 
-      parentJob: run_completed_102
-      id: 103
+      parentJob: run_completed_5
+      id: 6
       publishers: 10
       subscribers: 10
       topics: 10
-      payload: 131072 # 128kb
-      qos: 0
-  
-  ### QoS 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_103
-      id: 150
-      publishers: 10
-      subscribers: 10
-      topics: 1
-      payload: 32
-      qos: 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_150
-      id: 151
-      publishers: 10
-      subscribers: 10
-      topics: 1
-      payload: 131072 # 128kb
-      qos: 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_151
-      id: 152
-      publishers: 100
-      subscribers: 100
-      topics: 100
-      payload: 32 # 128kb
+      payload: 1024
       qos: 1
 
   - template: mqtt-perf-test-case.yaml
     parameters: 
-      parentJob: run_completed_152
-      id: 153
+      parentJob: run_completed_6
+      id: 7
+      publishers: 10
+      subscribers: 1
+      topics: 1
+      payload: 1024
+      qos: 0
+
+  - template: mqtt-perf-test-case.yaml
+    parameters: 
+      parentJob: run_completed_7
+      id: 8
+      publishers: 10
+      subscribers: 1
+      topics: 1
+      payload: 1024
+      qos: 1
+
+## 1mb
+
+  - template: mqtt-perf-test-case.yaml
+    parameters: 
+      parentJob: run_completed_8
+      id: 9
       publishers: 10
       subscribers: 10
       topics: 10
-      payload: 131072 # 128kb
-      qos: 1
-  
-  ################################################################################	
-  # Fan-out Test cases (few publishers/many subscribers)
-  ################################################################################	
-  
-  ### QoS 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_153
-      id: 200
-      publishers: 2
-      subscribers: 100
-      topics: 1
-      payload: 32
-      qos: 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_200
-      id: 201
-      publishers: 2
-      subscribers: 10
-      topics: 1
-      payload: 131072 # 128kb
+      payload: 1048576
       qos: 0
 
   - template: mqtt-perf-test-case.yaml
     parameters: 
-      parentJob: run_completed_201
-      id: 202
-      publishers: 2
-      subscribers: 100
-      topics: 100
-      payload: 32
-      qos: 0
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_202
-      id: 203
-      publishers: 2
+      parentJob: run_completed_9
+      id: 10
+      publishers: 10
       subscribers: 10
       topics: 10
-      payload: 131072 # 128kb
-      qos: 0
-  
-  ### QoS 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_203
-      id: 250
-      publishers: 2
-      subscribers: 100
-      topics: 1
-      payload: 32
-      qos: 1
-  
-  - template: mqtt-perf-test-case.yaml
-    parameters: 
-      parentJob: run_completed_250
-      id: 251
-      publishers: 2
-      subscribers: 10
-      topics: 1
-      payload: 131072 # 128kb
+      payload: 1048576
       qos: 1
 
   - template: mqtt-perf-test-case.yaml
     parameters: 
-      parentJob: run_completed_251
-      id: 252
-      publishers: 2
-      subscribers: 100
-      topics: 100
-      payload: 32
-      qos: 1
-  
+      parentJob: run_completed_10
+      id: 11
+      publishers: 10
+      subscribers: 1
+      topics: 1
+      payload: 1048576
+      qos: 0
+
   - template: mqtt-perf-test-case.yaml
     parameters: 
-      parentJob: run_completed_252
-      id: 253
-      publishers: 2
-      subscribers: 10
-      topics: 10
-      payload: 131072 # 128kb
+      parentJob: run_completed_11
+      id: 12
+      publishers: 10
+      subscribers: 1
+      topics: 1
+      payload: 1048576
       qos: 1
