--- a/edgelet/edgelet-docker/test/linux/sample_settings_content_trust.yaml
+++ b/edgelet/edgelet-docker/test/linux/sample_settings_content_trust.yaml
@@ -35,9 +35,9 @@ moby_runtime:
   uri: "http://localhost:2375"
   network: "azure-iot-edge"
   content_trust_root_ca_registry :
-    registryserverurl1 : "/path/to/root_registry1.ca"
-    registryserverurl2 : "/path/to/root_registry2.ca"
+    registryserverhostname1 : "/path/to/root_registry1.ca"
+    registryserverhostname2 : "/path/to/root_registry2.ca"
     "" : "/path/to/root_registry3.ca"
-    registryserverurl4 : "/path/to/root_registry4.ca"
-    registryserverurl4 : "/path/to/root_registryreplaced.ca"
-    registryserverurl5 : ""
+    registryserverhostname4 : "/path/to/root_registry4.ca"
+    registryserverhostname4 : "/path/to/root_registryreplaced.ca"
+    registryserverhostname5 : ""
