--- a/samples/dotnet/EdgeDownstreamDevice/EdgeDownstreamDevice.csproj
+++ b/samples/dotnet/EdgeDownstreamDevice/EdgeDownstreamDevice.csproj
@@ -9,6 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.27.0-dybronso-1-dybronso-1" />
+	<PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.27.0-dybronso-1" />
   </ItemGroup>
 </Project>
