[PnP] PlugAndPlay first E2E test (#3240)
Adding first PlugAndPlay e2e test to new e2e test framework. It makes a leaf device, gives it a modelId, sends a message, and confirms that the device has been registered with the correct model Id from IoT Hub

--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -12,8 +12,10 @@ steps:
       TestContainerRegistryPassword,
       TestDpsGroupKeySymmetric,
       TestEventHubCompatibleEndpoint,
+      TestPreviewEventHubCompatibleEndpoint,
       TestIotedgedPackageRootSigningCert,
       TestIotHubConnectionString,
+      TestPreviewIotHubConnectionString,
       TestRootCaCertificate,
       TestRootCaKey,
       TestRootCaPassword
