move support bundle logic to own file

--- a/edgelet/Cargo.toml
+++ b/edgelet/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "mini-sntp",
     "provisioning",
     "signal-future",
+    "support-bundle",
     "systemd",
     "tokio-named-pipe",
     "win-logger",
