--- a/edgelet/support-bundle/Cargo.toml
+++ b/edgelet/support-bundle/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "iotedge"
+name = "support-bundle"
 version = "0.1.0"
-authors = ["Azure IoT Edge Devs"]
-description = """
-The iotedge tool is used to manage the IoT Edge runtime.
-"""
+authors = ["Lee Fitchett <lefitche@microsoft.com>"]
 edition = "2018"
+
 [dependencies]
 atty = "0.2"
 bytes = "0.4"
@@ -35,7 +33,6 @@ edgelet-http = { path = "../edgelet-http" }
 edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
 management = { path = "../management" }
 mini-sntp = { path = "../mini-sntp" }
-support-bundle = { path = "../support-bundle" }
 
 [target.'cfg(unix)'.dependencies]
 byte-unit = "3.0.3"
@@ -48,4 +45,3 @@ winapi = { version = "0.3", features = ["ntdef", "ntstatus", "winnt", "winsock2"
 [dev-dependencies]
 edgelet-test-utils = { path = "../edgelet-test-utils" }
 tempfile = "3.1.0"
-
