--- a/mqtt/mqtt-edgehub/Cargo.toml
+++ b/mqtt/mqtt-edgehub/Cargo.toml
@@ -35,6 +35,7 @@ hyperlocal = "0.7"
 lazy_static = "1.4"
 matches = "0.1"
 mockito = "0.25"
+proptest = "0.9"
 test-case = "1.0"
 tokio = { version = "0.2", features = ["macros"] }
 
